pushing to live

--- a/Band/favoriteBand.html
+++ b/Band/favoriteBand.html
@@ -44,7 +44,11 @@
 
   <a href="https://www.thecurrent.org/">Glass Animals, 'Dreamland' POLYDOR RECORDS</a>
 
+<button onclick="snd.play()"> Click Me </button>
 
+<script>
+  var snd = new Audio("C:\Users\richa\Desktop\code\myFavorite\Band\heat waves sea shanty 5.mp3");
+</script>
 
 
 </body>
