--- a/index.html
+++ b/index.html
@@ -1,30 +1,62 @@
-<a href="<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <title>Favorite Band</title>
+
+<style>
+
+#heading {
+  color: hotpink;
+  background-color: indigo;
+  font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+  font-size: 76px;
+}
+
+.funky {
+  color: hotpink;
+  font-size: 46px;
+
+}
+
+.italic {
+  font-style: italic;
+  color: blueviolet;
+}
+
+body {
+  background-color: lavender;
+}
+
+
+</style>
+
+
+
+  
+
 <head>
   <link rel="icon" type="image/jpg"
     href="https://img.apmcdn.org/20e3c580a508baa5fc030f7e7c084d98eee6999f/square/860fe2-20200709-glass-animals-dreamland.jpg" />
   <meta charset="UTF-8" />
-<h1>My Favorite Band</h1>
+<h1 id="heading">My Favorite Band</h1>
   <title>Glass Animals</title>
 </head>
 
 <body>
-  <h1>Glass Animals</h1>
+  <h1 class="funky">Glass Animals</h1>
 
-  <p>
+  <p class="italic">
     A Generational Classic
   </p>
 
-  <h2>List of best songs</h2>
+  <h2 class="funky">List of best songs</h2>
 
   <ul>
     <li>Heat Waves</li>
     <li>The Other Side of Paradise</li>
     <li>Take a slice</li>
     <li>Gooet</li>
-    <li>Other top hits can be found here: <a href="https://open.spotify.com/artist/4yvcSjfu4PC0CYQyLy4wSq" a>Glass
-        Animals </a></li>
+    <p class="italic">Other top hits can be found here: <a href="https://open.spotify.com/artist/4yvcSjfu4PC0CYQyLy4wSq" a>Glass
+        Animals </a></p>
 
     </a>
 
@@ -48,10 +80,9 @@
 
 <script>
   var snd = new Audio("C:\Users\richa\Desktop\code\myFavorite\Band\heat waves sea shanty 5.mp3");
-</script>
+</>
 
 
 </body>
 
-</html>">Page 2</a>
-<a href="https://github.com/BR0C0DE/myFavorite/blob/main/favoriteMovie.html">Page 2</a>
+</html>
